# menderer

./: CMakeLists.txt  README.md
data/lion/: intrinsics.txt  pose.txt  trajectory.txt
include/menderer/: camera.h  dataset.h  mat.h  mesh.h  mesh_util.h  ply_io.h  scene.h  trajectory.h
include/menderer/ogl/: buffer.h  framebuffer.h  mesh_renderer.h  ogl.h  program.h  render_context.h  texture.h
src/: camera.cpp  dataset.cpp  main.cpp  mesh.cpp  mesh_util.cpp  ply_io.cpp  scene.cpp  trajectory.cpp
src/ogl/: buffer.cpp  framebuffer.cpp  mesh_renderer.cpp  program.cpp  render_context.cpp  texture.cpp
src/ogl/shaders/: normals.fs  normals.vs  normals_phong.fs  normals_phong.vs  phong.fs  phong.vs
